fix hover on ios

--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -15,7 +15,10 @@
 		margin-left -12px
 		width 55px
 		flex-basis 55px
+		height 100%
 		
+	&__logo
+		height 100%
 		
 	&__spacer
 		flex-grow 1
